--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/customer-details.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/customer-details.twig
@@ -17,6 +17,7 @@
         <div>
             <div spy-input-text="field.email" options="{ label: '{{ "customer.profile.email" | trans }}'}"></div>
             <div spy-input-text="field.salutation" options="{ label: '{{ "customer.profile.salutation" | trans }}' }"></div>
+            {#
             <div>
                 <button class="button default" ng-disabled="query" type="submit" ng-click="update()">{{ "customer.profile.update" | trans }}</button>
                 <p>
@@ -25,13 +26,14 @@
                     </a>
                 </p>
             </div>
+            #}
         </div>
         <div>
-            <div spy-input-select="field.gender" options="{ label : '{{ "customer.profile.gender" | trans }}' }"></div>
+            {#<div spy-input-select="field.gender" options="{ label : '{{ "customer.profile.gender" | trans }}' }"></div>#}
             <div spy-input-text="field.first_name" options="{ label : '{{ "customer.profile.first_name" | trans }}' }"></div>
         </div>
         <div>
-            <!--div spy-input-text="field.date_of_birth" options="{ label : '{{ "customer.profile.date_of_birth" | trans }}' }"></div-->
+            {#<div spy-input-text="field.date_of_birth" options="{ label : '{{ "customer.profile.date_of_birth" | trans }}' }"></div>#}
             <div spy-input-text="field.last_name" options="{ label : '{{ "customer.profile.last_name" | trans }}' }"></div>
         </div>
     </div>
