split customer address name into first/last name and clean up schema

--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Index/index.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Index/index.twig
@@ -23,7 +23,8 @@
         <table class="spy-grid spy-interactive">
             <thead>
             <tr>
-                <th spy-grid-head="columns['first_name']" label="Name"></th>
+                <th spy-grid-head="columns['first_name']" label="Vorname"></th>
+                <th spy-grid-head="columns['last_name']" label="Nachname"></th>
                 <th spy-grid-head="columns['email']" label="E-Mail"></th>
                 <th spy-grid-head="columns['created_at']" label="Signed Up"></th>
             </tr>
