--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/addressbook.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/addressbook.twig
@@ -20,7 +20,7 @@
             </p>
             #}
 
-            <div><strong>{{ address.name }}</strong></div>
+            <div><strong>{{ address.first_name }} {{ address.last_name }}</strong></div>
             <div>{{ address.company }}</div>
             <div>{{ address.address1 }}</div>
             <div>{{ address.address2 }}</div>
