--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/address.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/address.twig
@@ -14,7 +14,10 @@
         <div spy-input-hidden="field.id_customer_address"></div>
         <div class="spy-layout n2">
             <div>
-                <div spy-input-text="field.name" options="{ label : 'customer.profile.address.name' }"></div>
+                <div>
+                    <div spy-input-text="field.first_name" options="{ label : 'customer.profile.address.first_name' }"></div>
+                    <div spy-input-text="field.last_name" options="{ label : 'customer.profile.address.last_name' }"></div>
+                </div>
                 <div spy-input-text="field.address1" options="{ label : 'customer.profile.address.addressline1' }"></div>
                 <div spy-input-text="field.zip" options="{ label : 'customer.profile.address.zip_code' }"></div>
                 <div spy-input-select="field.fk_country" options="{ label : 'customer.profile.address.country' }"></div>
