optimize paths in Zed TwigServiceProvider

--- a/Bundles/System/src/SprykerFeature/Zed/System/Presentation/Index/index.twig
+++ b/Bundles/System/src/SprykerFeature/Zed/System/Presentation/Index/index.twig
@@ -1,4 +1,4 @@
-{% extends '@Application/layout.twig' %}
+{% extends '@Application/Layout/layout.twig' %}
 {% block content %}
 
 <h1>Please select a backend host</h1>
