--- a/Bundles/Acl/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
+++ b/Bundles/Acl/src/SprykerFeature/Zed/Acl/Presentation/Group/index.twig
@@ -1,4 +1,4 @@
-{% extends '@Application/layout.twig' %}
+{% extends '@Application/Layout/layout.twig' %}
 
 {% block content %}
     <section spy-app="spyFormat, spyGrid, spyLayout">
