--- a/Bundles/Lumberjack/src/SprykerFeature/Zed/Lumberjack/Presentation/Index/index.twig
+++ b/Bundles/Lumberjack/src/SprykerFeature/Zed/Lumberjack/Presentation/Index/index.twig
@@ -1,4 +1,4 @@
-{% extends '@Application/layout.twig' %}
+{% extends '@Application/Layout/layout.twig' %}
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{{ staticPath('Lumberjack/styles/lumberjack.css') }}" media="screen">
