--- a/Bundles/Product/src/SprykerFeature/Zed/Product/Presentation/Import/index.twig
+++ b/Bundles/Product/src/SprykerFeature/Zed/Product/Presentation/Import/index.twig
@@ -1,4 +1,4 @@
-{% extends '@Application/layout.twig' %}
+{% extends '@Application/Layout/layout.twig' %}
 {% block content %}
     <script type="text/javascript" src="{{ staticPath('Product/scripts/jasny.min.js') }}"></script>
     <p>
