--- a/Bundles/System/src/SprykerFeature/Zed/System/Presentation/Code/zed-api.twig
+++ b/Bundles/System/src/SprykerFeature/Zed/System/Presentation/Code/zed-api.twig
@@ -1,4 +1,4 @@
-{% extends '@Application/layout.twig' %}
+{% extends '@Application/Layout/layout.twig' %}
 {% block content %}
 
 {{ widget('/system/zed-api-grid') }}{% endblock %}
