--- a/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/index.twig
+++ b/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/index.twig
@@ -22,7 +22,7 @@
 
         <div spy-grid-pages="pages" labels="{ items : 'Show items %n', pages : 'Page %n of %m' }"></div>
 
-        <table class="spy-grid spy-interactive">
+        <table class="spy-grid">
             <thead>
             <tr>
                 <th spy-grid-head="columns['name']" label="Name"></th>
@@ -33,7 +33,7 @@
 
             <tbody>
             <tr ng-repeat="row in rows">
-                <td>{[{ row['first_name'] + ' ' + row['last_name'] }]}</td>
+                <td><a href="/user/index/details?id={[{ row.id_user_user }]}">{[{ row['first_name'] + ' ' + row['last_name'] }]}</a></td>
                 <td>{[{ row['username'] }]}</td>
                 <td>{[{ row['group'] }]}</td>
             </tr>
