finished userd details form

--- a/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/details.twig
+++ b/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/details.twig
@@ -4,7 +4,7 @@
 
 {% block head2 %}--{% endblock %}
 
-{% block title_content %}Users List{% endblock %}
+{% block title_content %}Users Details{% endblock %}
 
 {% block content %}
     <div class="spy-layout n2">
@@ -12,7 +12,7 @@
             {% include '@User/Index/section/user-details-form.twig' %}
         </div>
         <div class="spy-layout sparse">
-            {% include '@User/Index/section/change-password-form.twig' %}
+
         </div>
     </div>
 
