--- a/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/index.twig
+++ b/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/index.twig
@@ -33,9 +33,9 @@
 
             <tbody>
             <tr ng-repeat="row in rows">
-                <td><a href="/user/index/details?id={[{ row.id_user_user }]}">{[{ row['first_name'] + ' ' + row['last_name'] }]}</a></td>
-                <td>{[{ row['username'] }]}</td>
-                <td>{[{ row['group'] }]}</td>
+                <td><a href="/user/index/details?id={[{ row.id_user_user }]}">{[{ row.first_name + ' ' + row.last_name }]}</a></td>
+                <td>{[{ row.username }]}</td>
+                <td>{[{ row.group }]}</td>
             </tr>
             <tr ng-if="!rows.length">
                 <td colspan="4">{{ "grid.no.results" | trans }}</td>
