--- a/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/section/user-details-form.twig
+++ b/Bundles/User/src/SprykerFeature/Zed/User/Presentation/Index/section/user-details-form.twig
@@ -9,12 +9,13 @@
         ng-class="{ query : queryActive }"
         >
 
-    <h3>User details</h3>
+        <h3>User details</h3>
 
         <div spy-input-text="field.first_name" options="{label: 'First name'}"></div>
         <div spy-input-text="field.last_name" options="{label: 'Last name'}"></div>
         <div spy-input-text="field.username" options="{label: 'Username'}"></div>
-        <div spy-input-switch="field.status" options="{ label : 'Is active' }"></div>
+        <div spy-input-password="field.password" options="{label: 'Password'}"></div>
+        <div spy-input-switch="field.status" options="{label: 'Is active'}"></div>
 
         <button class="button default" type="submit" ng-disabled="query" ng-click="update()">Update</button>
 
