--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/Table/header.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/Table/header.twig
@@ -2,6 +2,6 @@
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h5>{{ table_title | trans }}</h5>
+                <h5>{{ table_title | raw }}</h5>
             </div>
             <div class="ibox-content">
