updated old form to new twig implementation

--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/customer-details.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Partial/customer-details.twig
@@ -18,6 +18,7 @@
         <div class="col-sm-10"><input type="password" class="form-control" name="password"> <span class="help-block m-b-none">Password will be changed if a new one will be provided.</span>
         </div>
     </div>
+    {#{{ form.row(form.first_name) }}#}
     <div class="hr-line-dashed"></div>
 
 
