updated views in glossary and sales

--- a/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Index/index.twig
+++ b/Bundles/Customer/src/SprykerFeature/Zed/Customer/Presentation/Index/index.twig
@@ -11,10 +11,10 @@
         <table class="footable table table-stripped toggle-arrow-tiny">
             <thead>
             <tr>
-                <th spy-grid-head="columns['first_name']" label="Vorname"></th>
-                <th spy-grid-head="columns['last_name']" label="Nachname"></th>
-                <th spy-grid-head="columns['email']" label="E-Mail"></th>
-                <th spy-grid-head="columns['created_at']" label="Signed Up"></th>
+                <th>{{ 'Vorname' | trans }}</th>
+                <th>{{ 'Nachname' | trans }}</th>
+                <th>{{ 'E-Mail' | trans }}</th>
+                <th>{{ 'Signed Up' | trans }}</th>
             </tr>
             </thead>
 
