updated layout static files less

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -14,14 +14,14 @@
         {%- endblock %}
 
         {% block head_css_ui_old -%}
-            <link href="/spy/css/bootstrap.min.css" rel="stylesheet">
-            <link href="/spy/font-awesome/css/font-awesome.css" rel="stylesheet">
+            <link href="/bundles/Gui/styles/bootstrap.min.css" rel="stylesheet">
+            <link href="/bundles/Gui/font-awesome/css/font-awesome.css" rel="stylesheet">
 
             <!-- FooTable -->
-            <link href="/spy/css/plugins/footable/footable.core.css" rel="stylesheet">
+            <link href="/bundles/Gui/styles/plugins/footable/footable.core.css" rel="stylesheet">
 
-            <link href="/spy/css/animate.css" rel="stylesheet">
-            <link href="/spy/css/style-gulp.css" rel="stylesheet">
+            <link href="/bundles/Gui/styles/animate.css" rel="stylesheet">
+            <link href="/bundles/Gui/styles/style-gulp.css" rel="stylesheet">
             {#<link rel="stylesheet" type="text/css" href="{{ staticPath('Ui/styles/bundle.css') }}">#}
         {%- endblock %}
 
@@ -109,17 +109,17 @@
 
 
 <!-- Mainly scripts -->
-<script src="/spy/js/jquery-2.1.1.js"></script>
-<script src="/spy/js/bootstrap.min.js"></script>
-<script src="/spy/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="/spy/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/bundles/Gui/scripts/jquery-2.1.1.js"></script>
+<script src="/bundles/Gui/scripts/bootstrap.min.js"></script>
+<script src="/bundles/Gui/scripts/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/bundles/Gui/scripts/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 <!-- FooTable -->
-<script src="/spy/js/plugins/footable/footable.all.min.js"></script>
+<script src="/bundles/Gui/scripts/plugins/footable/footable.all.min.js"></script>
 
 <!-- Custom and plugin javascript -->
-<script src="/spy/js/inspinia.js"></script>
-{#<script src="/spy/js/plugins/pace/pace.min.js"></script>#}
+<script src="/bundles/Gui/scripts/inspinia.js"></script>
+{#<script src="/bundles/Gui/scripts/plugins/pace/pace.min.js"></script>#}
 
 <!-- Page-Level Scripts -->
 <script>
