updated layout static files less

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -107,17 +107,17 @@
 </div>
 
 <!-- Mainly scripts -->
-<script src="/spy/js/jquery-2.1.1.js"></script>
-<script src="/spy/js/bootstrap.min.js"></script>
-<script src="/spy/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="/spy/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/bundles/Gui/scripts/jquery-2.1.1.js"></script>
+<script src="/bundles/Gui/scripts/bootstrap.min.js"></script>
+<script src="/bundles/Gui/scripts/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/bundles/Gui/scripts/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 <!-- FooTable -->
-<script src="/spy/js/plugins/footable/footable.all.min.js"></script>
+<script src="/bundles/Gui/scripts/plugins/footable/footable.all.min.js"></script>
 
 <!-- Custom and plugin javascript -->
-<script src="/spy/js/inspinia.js"></script>
-{#<script src="/spy/js/plugins/pace/pace.min.js"></script>#}
+<script src="/bundles/Gui/scripts/inspinia.js"></script>
+{#<script src="/bundles/Gui/scripts/plugins/pace/pace.min.js"></script>#}
 
 <!-- Page-Level Scripts -->
 <script>
