--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -106,17 +106,19 @@
     </div>
 </div>
 
+
+{% block footer_js %}
 <!-- Mainly scripts -->
-<script src="/bundles/Gui/scripts/jquery-2.1.1.js"></script>
-<script src="/bundles/Gui/scripts/bootstrap.min.js"></script>
-<script src="/bundles/Gui/scripts/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="/bundles/Gui/scripts/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+{#<script src="/bundles/Gui/scripts/jquery-2.1.1.js"></script>#}
+{#<script src="/bundles/Gui/scripts/bootstrap.min.js"></script>#}
+{#<script src="/bundles/Gui/scripts/plugins/metisMenu/jquery.metisMenu.js"></script>#}
+{#<script src="/bundles/Gui/scripts/plugins/slimscroll/jquery.slimscroll.min.js"></script>#}
 
 <!-- FooTable -->
-<script src="/bundles/Gui/scripts/plugins/footable/footable.all.min.js"></script>
+{#<script src="/bundles/Gui/scripts/plugins/footable/footable.all.min.js"></script>#}
 
 <!-- Custom and plugin javascript -->
-<script src="/bundles/Gui/scripts/inspinia.js"></script>
+<script src="/bundles/Gui/scripts/resources.min.js"></script>
 {#<script src="/bundles/Gui/scripts/plugins/pace/pace.min.js"></script>#}
 
 <!-- Page-Level Scripts -->
@@ -136,6 +138,7 @@
     //    });
 
 </script>
+{% endblock %}
 
 </body>
 
