CD-206 Extend layout with gui js placeholder

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -122,6 +122,19 @@
 {#<script src="/bundles/Gui/scripts/plugins/pace/pace.min.js"></script>#}
 {% endblock %}
 
+{% if gui is defined %}
+    {% for guiElement in gui %}
+        {% for js in guiElement.getJS %}
+<script src="/spy/js/{{ js }}"></script>
+        {% endfor %}
+    {% endfor %}
+<script>
+    $(document).ready(function() {
+        $('.gui-table-data').DataTable();
+    } );
+</script>
+{% endif %}
+
 </body>
 
 </html>
