extend sample country form

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/autosuggest.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/autosuggest.twig
@@ -1,20 +1,17 @@
 {% block autosuggest_widget %}
     {{ form_widget(form,  { 'attr': {'class': 'type_asw'} }) }}
-    {% block stylesheets %}
-        <link href="//raw.githubusercontent.com/devbridge/jQuery-Autocomplete/master/content/styles.css" rel="stylesheet"/>
-    {% endblock stylesheets %}
-    {% block javascripts %}
-        <script type="text/javascript" src="//raw.githubusercontent.com/devbridge/jQuery-Autocomplete/master/src/jquery.autocomplete.js" />
-    {% endblock javascripts %}
+    <link href="//raw.githubusercontent.com/devbridge/jQuery-Autocomplete/master/content/styles.css" rel="stylesheet"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.21/jquery.autocomplete.min.js"></script>
     <script type="text/javascript">
         (function($) {
-          $(window).load(function() {
-              $('.type_asw').autocomplete({
-                  serviceUrl: '{{ url }}',
-                  minChars: 1,
-                  type: 'GET'
-              });
-          })
+            jQuery(window).load(function () {
+                $('.type_asw').autocomplete({
+                    serviceUrl: '{{ url }}',
+                    minChars: 1,
+                    type: 'GET'
+                });
+            });
         })(jQuery);
     </script>
-{% endblock autosuggest_widget %}
+{% endblock %}
