--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
@@ -1,12 +1,8 @@
 {% block select_widget %}
     {{ form_widget(form,  { 'attr': {'class': 'type_s2w'} }) }}
-    {% block stylesheets %}
-        <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet"/>
-    {% endblock stylesheets %}
-    {% block javascripts %}
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-    {% endblock javascripts %}
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
     <script type="text/javascript">
         (function($) {
             jQuery(window).load(function () {
