CD-206 Update templates

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -130,7 +130,7 @@
     {% endfor %}
 <script>
     $(document).ready(function() {
-        $('.gui-table-data').DataTable();
+        $('.gui-table-data').dataTable();
     } );
 </script>
 {% endif %}
