--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Table/index.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Table/index.twig
@@ -1,12 +1,14 @@
 <table
         border="1"
         class="table table-striped table-bordered table-hover gui-table-data"
+        data-ajax="/{{ app.request.get('module') }}/{{ app.request.get('controller') }}/{{ config.url }}"
+        data-processing="true"
+        data-server-side="true"
         id="{{ config.tableId }}"
         {% if config.pageLength is defined %}
             data-page-length="{{ config.pageLength }}"
         {%  endif %}
         >
     {% include '@Gui/Table/thead.twig' %}
-    {% include '@Gui/Table/tbody.twig' %}
     {% include '@Gui/Table/tfoot.twig' %}
 </table>
