--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
@@ -1,23 +1,23 @@
 {% block select_widget %}
     {{ form_widget(form,  { 'attr': {'class': 'type_s2w'} }) }}
     <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
     <script type="text/javascript">
-        (function($) {
-            jQuery(window).load(function () {
-                $('.type_s2w').select2({
-                    placeholder: "{{ placeholder }}",
-                    ajax: {
-                        url: "{{ url }}",
-                        dataType: 'json',
-                        cache: true
-                    },
-                    minimumInputLength: 1,
-                    allowClear: true,
-                    width: '200px'
+        (function ($) {
+            $(window).load(function () {
+                $(function() {
+                    $('.type_s2w').select2({
+                        placeholder: '{{ placeholder }}',
+                        ajax: {
+                            url: '{{ url }}',
+                            cache: true
+                        }
+                    });
                 });
             });
         })(jQuery);
     </script>
 {% endblock select_widget %}
+
+
