added font Spryker styles

--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/menu.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/menu.twig
@@ -26,7 +26,7 @@
     {%- if node is defined %}
         <li class="{{ node.is_active is defined and node.is_active ? " active" : "" }}">
             <a href="javascript:void(0)">
-                <i class="fa fa-flask"></i>
+                <i class="fa font-spryker menu-icon"></i>
                 <span class="nav-label">{{ node.label }}</span>
                 <span class="fa arrow"></span>
             </a>
