updated font path

--- a/Bundles/Gui/Static/Assets/LESS/spryker.less
+++ b/Bundles/Gui/Static/Assets/LESS/spryker.less
@@ -1,7 +1,7 @@
 /* Custom Spryker CSS Elements */
 @font-face {
   font-family: 'Spryker';
-  src: url('/fonts/Spryker.ttf') format('truetype');
+  src: url('/bundles/Gui/fonts/Spryker.ttf') format('truetype');
 }
 
 .font-spryker {
