--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Form/Type/select.twig
@@ -1,13 +1,10 @@
 {% block select_widget %}
-    {{ form_widget(form,  { 'attr': {'class': 'type_s2w'} }) }}
-    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+    {{ form_widget(form) }}
     <script type="text/javascript">
         (function ($) {
             $(window).load(function () {
                 $(function() {
-                    $('.type_s2w').select2({
+                    $('#{{ id }}').select2({
                         placeholder: '{{ placeholder }}',
                         ajax: {
                             url: '{{ url }}',
@@ -19,5 +16,3 @@
         })(jQuery);
     </script>
 {% endblock select_widget %}
-
-
