--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/menu.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Partials/menu.twig
@@ -1,4 +1,4 @@
-{%- macro leaf(node) -%}
+{%- macro leaf(node, depth=0) -%}
     {%- if node is defined %}
         {%- if menu_highlight is defined -%}
             {%- if menu_highlight == node.uri -%}
@@ -13,26 +13,30 @@
                 href="{{ node.uri }}"
                 {% if node.shortcut is defined %}data-hotkey="{{ node.shortcut }}"{% endif %}
                 >
-            <i class="fa fa-flask"></i>
+            {% if depth == 0 %}
+            <i class="{% if node.icon is defined and node.icon != '' %}{{ node.icon }}{% else %}fa font-spryker menu-icon{% endif %}">s</i>
+            {% endif %}
             <span class="nav-label">{{ node.label }}</span>
         </a>
         </li>
     {% endif -%}
 {%- endmacro -%}
 
-{%- macro branch(node) -%}
+{%- macro branch(node, depth=0) -%}
     {%- import _self as menu -%}
 
     {%- if node is defined %}
         <li class="{{ node.is_active is defined and node.is_active ? " active" : "" }}">
             <a href="javascript:void(0)">
-                <i class="fa font-spryker menu-icon"></i>
+                {% if depth == 0 %}
+                <i class="{% if node.icon is defined and node.icon != '' %}{{ node.icon }}{% else %}fa font-spryker menu-icon{% endif %}">s</i>
+                {% endif %}
                 <span class="nav-label">{{ node.label }}</span>
                 <span class="fa arrow"></span>
             </a>
 
             <ul class="nav nav-second-level collapse">
-                {{ menu.tree(node.children) }}
+                {{ menu.tree(node.children, (depth + 1)) }}
             </ul>
         </li>
     {% endif -%}
@@ -43,9 +47,9 @@
 
     {%- for child in root -%}
         {%- if child.children is defined and child.children is not empty -%}
-            {{ menu.branch(child) }}
+            {{ menu.branch(child, 0) }}
         {%- else -%}
-            {{ menu.leaf(child) }}
+            {{ menu.leaf(child, 0) }}
         {%- endif -%}
     {%- endfor -%}
 {%- endmacro -%}
@@ -58,7 +62,11 @@
             <li class="nav-header">
                 <div class="dropdown profile-element">
 
-                    <a href="/" style="background: url(/bundles/Gui/sprite/images/sprite.svg); width: 165px; height: 159px; display: block;"></a>
+                    {#<a href="/" style="background: url(/bundles/Gui/sprite/images/sprite.svg); width: 165px; height: 159px; display: block;"></a>#}
+                    <a href="/" style="width: 165px; height: 159px; display: block; text-align: center;">
+                        <span class="font-spryker spryker-logo"></span>
+                        <span>Spryker</span>
+                    </a>
 
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
                         <li><a href="">Profile</a></li>
