--- a/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
+++ b/Bundles/Gui/src/SprykerFeature/Zed/Gui/Presentation/Layout/layout.twig
@@ -119,21 +119,13 @@
 
 <!-- Custom and plugin javascript -->
 <script src="/bundles/Gui/scripts/resources.min.js"></script>
+<script src="/bundles/Gui/scripts/bundle.js"></script>
+<script src="/bundles/Gui/scripts/plugins/dataTables/jquery.dataTables.js"></script>
+<script src="/bundles/Gui/scripts/plugins/dataTables/dataTables.bootstrap.js"></script>
+<script src="/bundles/Gui/scripts/plugins/dataTables/dataTables.responsive.js"></script>
+<script src="/bundles/Gui/scripts/plugins/dataTables/dataTables.tableTools.min.js"></script>
 {#<script src="/bundles/Gui/scripts/plugins/pace/pace.min.js"></script>#}
 {% endblock %}
-
-{% if gui is defined %}
-    {% for guiElement in gui %}
-        {% for js in guiElement.getJS %}
-<script src="/spy/js/{{ js }}"></script>
-        {% endfor %}
-    {% endfor %}
-<script>
-    $(document).ready(function() {
-        $('.gui-table-data').dataTable();
-    } );
-</script>
-{% endif %}
 
 </body>
 
